...

  "addNote": "Add Note",
  "@addNote": {
    "description": " Add Note"
  },

  "after": "After",
  "@after": {
    "description": "After"
  },
  "age": "Age",
  "@age": {
    "description": "age"
...
    "description": "AM"
  },
  "bedtime": "Bedtime",
  "@bedtime": {
    "description": "Bedtime"
  },
  "before": "Before",
  "@before": {
    "description": "before"
  },
  "between": "Between",
  "@between": {
    "description": "Between"
  },
  "bp": "B.P",
  "@bp": {
    "description": "Blood Pressure"
...
    "description": "Required error message",
    "placeholders": {
      "field1": {},
      "field2": {}
    }
  },
  "investigations": "Investigations",
  "@investigations": {
    "description": "Investigations"
  },
  "isInvalid": "{field} is invalid",
  "@isInvalid": {
    "description": "Invalid error message",
...
    "description": "Required error message",
    "placeholders": {
      "field": {},
      "max": {}
    }
  },
  "medicalHistory": "Medical History",
  "@medicalHistory": {
    "description": "Medcial History"
  },
  "medication": "Medication",
  "@medication": {
    "description": "Medication"
...
  "@noOfMinutes": {
    "description": "{no} Minutes",
    "placeholders": {
      "no": {}
    }
  },
  "notes": "Notes",
  "@notes": {
    "description": "Nnotes"
  },
  "onceInDays": "Once in {no} days",
  "@onceInDays": {
    "description": "Once In days",
...
  },
  "pad": "pad",
  "@pad": {
    "description": "pad"
  },

  "parameters": "Parameters",
  "@parameters": {
    "description": "parameters"
  },
  "parameterName": "Parameter Name",
  "@parameterName": {
    "description": "parameter name"
...
  },
  "parameterUnit": "Parameter Unit",
  "@parameterUnit": {
    "description": "parameter unit"
  },

  "patient": "Patient",
  "@patient": {
    "description": "Patient"
  },


  "phone": "Phone",
...
    "description": "summary"
  },
  "sunday": "Sunday",
  "@sunday": {
    "description": "sunday"
  },
  "symptoms": "Symptoms",
  "@symptoms": {
    "description": "symptoms"
  },
  "systolic": "Systolic",
  "@systolic": {
    "description": "Systolic"
...
    "description": "value Range error message",
    "placeholders": {
      "max": {},
      "min": {}
    }
  },
  "vitals": "Vital Signs",
  "@vitals": {
    "description": "Vital Signs"
  },
  "view": "View",
  "@view": {
    "description": "View"
...
